[tool.poetry]
name = "portfolio-simulation"
version = "0.1.0"
description = "Simulation of optimal portfolio choice with ESG impact"
authors = ["Mikkel Andersen <mikkel694@gmail.com>"]
readme = "README.md"
packages = [{ include = "classes" }]

[tool.poetry.dependencies]
python = "3.13.2"
numpy = "^1.23"
matplotlib = "^3.8"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
ipython = "^9.2.0"
yfinance = "^0.2.61"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

